--- a/src/templates/head-styles.html
+++ b/src/templates/head-styles.html
@@ -1,3 +1,5 @@
 <!-- Template: Head Styles -->
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/tablet.css" media="(max-width: 1070px)">
 <link rel="stylesheet" href="css/responsive.css" media="(max-width: 685px)">
+<link rel="stylesheet" href="css/mobile.css" media="(max-width: 500px)">
