--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -239,10 +239,16 @@ header{
   text-align: center;
   padding: 100px 32%;
   font-family: $principal-font;
+  opacity: 0;
+  transition: all 3s ease;
 
   p{
     font-size: 20px;
   }
+}
+
+.text-present-animation{
+  opacity: 1;
 }
 
 /* SKILLS SECTION */
@@ -400,6 +406,9 @@ table{
 
           &:hover{
             cursor: pointer;
+            transform: translate(-.1em,-.1em) ;
+            background-color: #0d1540;
+            box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.4);
           }
         }
 
