--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -24,16 +24,16 @@
             <ul>
           </if>
             <li>
-              <a href="index.html/#bg">Home</a>
+              <a href="index.html#bg">Home</a>
             </li>
             <li>
               <a href="repos.html">GitHub</a>
             </li>
             <li>
-              <a href="index.html/#skillsSection">Skills</a>
+              <a href="index.html#skillsSection">Skills</a>
             </li>
             <li>
-              <a href="index.html/contactSection">Contact</a>
+              <a href="index.html#contactSection">Contact</a>
             </li>
           </ul>
         </section>
