--- a/src/templates/social-networks.html
+++ b/src/templates/social-networks.html
@@ -1,15 +1,4 @@
 <!-- Template: Social Networks -->
-<ul>
-    <li>
-        <a href="https://www.linkedin.com/in/federico-sosa-026685153/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-    </li>
-    <li>
-        <a href="https://www.facebook.com/fede.gorsac35?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f"></i></a>
-    </li>
-    <li>
-        <a href="https://github.com/fdsosa" target="_blank"><i class="fab fa-github-alt"></i></a>
-    </li>
-    <li>
-        <a href="https://www.instagram.com/gorsac/" target="_blank"><i class="fab fa-instagram"></i></a>
-    </li>
+<ul id = "socialList">
+    <!-- API DATA -->
 </ul>
